TODO: 1. up/down/left/right 2. history api and url

--- a/src/css/page.css
+++ b/src/css/page.css
@@ -24,10 +24,12 @@ applet {
     opacity:0.4;
     position:relative;
     height:200px;
+    margin-bottom:10%;
 }
 .in_article#loading {
     position:relative;
     height:0px;
+    margin-bottom:0%;
 }
 
 /**### css for show ###**/
