--- a/src/css/page.css
+++ b/src/css/page.css
@@ -16,7 +16,7 @@ applet {
     transition:all 0.2s linear;
 }
 #loading { position:fixed; }
-.loading.active {
+.active.loading {
     opacity:0.6;
     height:100%;
 }
@@ -30,6 +30,11 @@ applet {
     position:relative;
     height:0px;
     margin-bottom:0%;
+}
+.float_active#loading {
+    opacity:0.6;
+    height:100%;
+    position:fixed;
 }
 
 /**### css for show ###**/
