general bug fix. TODO: DuoShuo append.

--- a/decoration/t_2/style.css
+++ b/decoration/t_2/style.css
@@ -1,6 +1,7 @@
 #Decoration { 
     position:fixed; width:100%; 
     background-image: linear-gradient(#5BF, #FFF 60%);
+    -webkit-backface-visibility: hidden;
 }
 
 /* ### page modification ### */
