--- a/src/css/page.css
+++ b/src/css/page.css
@@ -114,13 +114,13 @@ applet {
 /**### css for content ###**/
 #copyRight { 
     position:fixed; 
-    right:5%; 
+    right:1%; 
     bottom:3%; 
-    color:#FFF; 
+    color:#666; 
     z-index:1000; 
     font-size:0.8em;
     color:#e8e8e8\0;
-    text-shadow:0px 0px 4px #000;
+    text-shadow:0px 0px 12px #FFF;
     max-width: 32%;
     opacity:0;
     
@@ -128,6 +128,10 @@ applet {
 }
 #copyRight.active {
     opacity:1;
+}
+.mailto { 
+    color:#333;
+    text-shadow:0px 0px 24px #FFF;
 }
 #mainWrap.active { opacity:1; }
 #content.active { top:0; opacity:1; }
@@ -149,6 +153,7 @@ applet {
     line-height:150%;
     margin-bottom:10%;
     position:relative;
+    font-family:"楷体", "Microsoft YaHei","Hiragino Sans GB W3",Tahoma,Arial;
     /*
     box-shadow: 0px 0px 36px #adf;
     */
@@ -159,6 +164,13 @@ applet {
     border-top: 1px solid #ccc;
     margin-top: 2%;
     padding-top: 1%;
+}
+.voted .action_up, .voted .action_down {
+    cursor:default;
+}
+.voted .action_up:hover, .voted .action_down:hover {
+    text-shadow:none;
+    color:#999;
 }
 .article_action_wrap .loading { min-height:36px; background-color:#efefef; z-index:1000; display:none; }
 .img img, .comment_avatar img { width:100%; margin:12px 0; }
@@ -518,6 +530,9 @@ applet {
 .action_up { margin:0 1%; }
 .action_down { background-position:0 -24px; }
 
+.active.action_up { background-position:0 -50px; }
+.active.action_down { background-position:0 -70px; }
+
 .article_title {
     position: absolute;
     top: -43px;
@@ -718,12 +733,12 @@ applet {
 }
 .side_post_link:after, .wp_side_link:after {
     content: "";
-    top: 6px;
+    top: 11px;
     position: absolute;
     border-right: 1px solid #ccc;
     border-bottom: 1px solid #ccc;
-    height: 24px;
-    width: 24px;
+    height: 12px;
+    width: 12px;
     right: 104%;
     
     transition:all 0.2s ease-out;
@@ -735,6 +750,9 @@ applet {
     transform: rotate(-45deg);
 }
 .side_post_link:hover:after, .side_post_link.active:after, .wp_side_link:hover:after {
+    top:6px;
+    height:24px;
+    width:24px;
     background:#efefef;
     right: -13px;
 }
@@ -878,15 +896,15 @@ applet {
 }
 .oal_qq {
     width:24px;
-    background-position: -116px -4px;
+    background-position: -136px -4px;
 }
 .oal_sina {
     width:32px;
-    background-position: -49px -4px;
+    background-position: -69px -4px;
 }
 .oal_renren {
     width:25px;
-    background-position: -86px -4px;
+    background-position: -106px -4px;
 }
 
 /* end css for login section */
@@ -1532,14 +1550,17 @@ applet {
     .sidebar.active { margin-top: 12px; }
     
     .side_post_link, .wp_side_link {
-         height:24px; line-height:24px;
+        height:24px; line-height:24px;
     }
     .side_post_link:after, .wp_side_link:after {
-         height:16px; width:16px; top:4px;
+        height:8px; width:8px; top:7px;
     }
     .side_post_link:hover:after, .side_post_link.active:after, .wp_side_link:hover:after {
         background:#efefef;
         right: -9px;
+        height:16px;
+        width:16px;
+        top:4px;
     }
     
     .article_title {
@@ -1572,6 +1593,9 @@ applet {
     }
     #bottom {
         margin-left: -32px;
+    }
+    .side_menu_group:after {
+        top:24px;
     }
 }
 /* IE10-specific */
