--- a/src/css/page.css
+++ b/src/css/page.css
@@ -153,11 +153,15 @@ applet {
     line-height:150%;
     margin-bottom:10%;
     position:relative;
-    font-family:"楷体", "Microsoft YaHei","Hiragino Sans GB W3",Tahoma,Arial;
+    opacity:0.9;
     /*
     box-shadow: 0px 0px 36px #adf;
     */
     box-shadow: 0px 0px 36px #999;
+    transition:opacity 0.2s linear;
+}
+.article:hover {
+    opacity:1;
 }
 .article_action_wrap { 
     position: relative;
@@ -693,7 +697,12 @@ applet {
 .sidebar_content {
     background:#FFF;
     padding:3% 0;
+    opacity:0.9;
+    transition:opacity 0.2s linear;
     box-shadow: 0px 0px 36px #999;
+}
+.sidebar_content:hover {
+    opacity:1;
 }
 
 .yar_float_sidebar {
